--- a/index.html
+++ b/index.html
@@ -393,6 +393,31 @@
       </div>
     </section><!-- End Skills Section -->
 
+    <!-- ======= Download Section ======= -->
+    <section id="download" class="download">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Download</h2>
+          <p>You can download printing version as below.</p>
+        </div>
+
+        <div class="download content">
+
+          <div class="col-lg-6" data-aos="fade-up">
+
+            <div class="button">
+              <a class="btn btn-danger" role="button" href="assets\download\Tran Quy Phong - Resume.pdf" 
+              download="Tran Quy Phong - Resume.pdf">Download</a>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Download Section -->
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
