--- a/index.html
+++ b/index.html
@@ -404,9 +404,15 @@
 
         <div class="download content">
 
-            <div class="button">
+            <div class="download resume">
               <a class="btn btn-danger" role="button" href="assets\download\Tran Quy Phong - Resume.pdf" 
-              download="Tran Quy Phong - Resume.pdf">Download</a>
+              download="Tran Quy Phong - Resume.pdf">Resume</a>
+              </div>
+            </div>
+
+            <div class="download credentials">
+              <a class="btn btn-danger" role="button" href="assets\download\My credentials.pdf" 
+              download="My credentials.pdf">Resume</a>
               </div>
             </div>
 
