--- a/index.html
+++ b/index.html
@@ -405,13 +405,13 @@
         <div class="download content">
 
             <div class="download resume">
-              <a class="btn btn-danger" role="button" href="assets\download\Tran Quy Phong - Resume.pdf" 
+              <a class="btn btn-outline-danger btn-lg" role="button" href="assets\download\Tran Quy Phong - Resume.pdf" 
               download="Tran Quy Phong - Resume.pdf">My resume</a>
               </div>
             </div>
 
             <div class="download credentials">
-              <a class="btn btn-danger" role="button" href="assets\download\My credentials.pdf" 
+              <a class="btn btn-outline-danger btn-lg" role="button" href="assets\download\My credentials.pdf" 
               download="My credentials.pdf">My credentials</a>
               </div>
             </div>
