--- a/index.html
+++ b/index.html
@@ -410,11 +410,11 @@
               </div>
             </div>
 
-            <div class="download credentials">
+            <!--<div class="download credentials">
               <a class="btn btn-outline-danger btn-lg" role="button" href="assets\download\My credentials.pdf" 
               download="My credentials.pdf">My credentials</a>
               </div>
-            </div>
+            </div>-->
 
           </div>
 
